--- a/Groovy/Components/Layout/NavMenu.razor
+++ b/Groovy/Components/Layout/NavMenu.razor
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="magic-playlist">
+                    <NavLink class="nav-link" href="magic-playlists">
                         <span class="bi bi-magic"></span> Magic Playlist
                     </NavLink>
                 </div>
